@@ -1,0 +1,102 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- $Id$ -->
+<form>
+	<fields group="profile" array="true" label="User_Profile_Label">
+		<field
+			name="address1"
+			type="text"
+			id="address1"
+			label="User_Profile_Address1_Label"
+			description="User_Profile_Address1_Desc"
+			message="User_Profile_Address1_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+		<field
+			name="address2"
+			type="text"
+			id="address2"
+			label="User_Profile_Address2_Label"
+			description="User_Profile_Address2_Desc"
+			message="User_Profile_Address1_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+		<field
+			name="city"
+			type="text"
+			id="city"
+			label="User_Profile_City_Label"
+			description="User_Profile_City_Desc"
+			message="User_Profile_City_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+		<field
+			name="region"
+			type="text"
+			id="region"
+			label="User_Profile_Region_Label"
+			description="User_Profile_Region_Desc"
+			message="User_Profile_Region_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+		<field
+			name="country"
+			type="text"
+			id="country"
+			label="User_Profile_Country_Label"
+			description="User_Profile_Country_Desc"
+			message="User_Profile_Country_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+		<field
+			name="postal_code"
+			type="text"
+			id="postal_code"
+			label="User_Profile_postal_code_Label"
+			description="User_Profile_postal_code_Desc"
+			message="User_Profile_postal_code_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+		<field
+			name="phone"
+			type="text"
+			id="phone"
+			label="User_Profile_Phone_Label"
+			description="User_Profile_Phone_Desc"
+			message="User_Profile_Phone_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+		<field
+			name="website"
+			type="text"
+			id="website"
+			label="User_Profile_web_site_Label"
+			description="User_Profile_web_site_Desc"
+			message="User_Profile_web_site_Message"
+			class="inputbox"
+			size="30"
+			default=""
+			filter="string"
+		/>
+	</fields>
+</form>
